# core

./: .bazelignore  .bazelrc  .editorconfig  .gitignore  .pep8  BUILD.bazel  CONTRIBUTING.md  GEMINI.md  METADATA  MODULE.bazel  README.md  WORKSPACE  config.bzl.tmpl  config.sh.tmpl  current_versions.txt  deploy.sh  extension_for_rules_oci.bzl  go.mod  go.sum  new_versions.txt  non_module_deps.bzl  nvchecker.toml
bazel/: BUILD.bazel  BUILD.sysroot  app.bzl  app_chart.bzl  base_images.bzl  container_push.bzl  debug_repository.bzl  proto_crd.bzl  proto_k8s_service.bzl  proto_k8s_service.proto.tmpl  repositories.bzl
bazel/build_rules/: BUILD.bazel  CustomResource.java.template  copy.bzl  custom_resources.bzl  expand_vars.bzl  helm_chart.bzl  helm_template.bzl  proto_descriptor.bzl  qualify_images.bzl  ros_plugins.bzl  rosmsg.bzl
bazel/build_rules/app_chart/: BUILD.bazel  Chart.yaml.template  cache_gcr_credentials.bzl  cache_gcr_credentials.sh.tpl  push_all.bzl  push_all.sh.tpl  run_parallel.bzl  run_parallel.sh.tpl  run_sequentially.bzl  run_sequentially.sh.tpl  values-cloud.yaml  values-robot.yaml
bazel/build_rules/ros/ros_py_test/: BUILD.bazel  example_rostest.py  harness.py.tpl  package.xml.tpl  ros_py_test.bzl  template.test.tpl
bazel/buildcleaner/: BUILD.bazel  README.md  main.go
bazel/buildcleaner/cmd/: BUILD.bazel  fixWorkspace.go  getLicenses.go  root.go  workspace.go
bazel/internal/: BUILD.bazel  core_app_chart.bzl
bazel/proto_crd/: BUILD.bazel  proto_crd.bzl  proto_k8s_service.bzl  proto_k8s_service.proto.tmpl  repositories.bzl
bazel/rbe_config/cc/: BUILD
bazel/rbe_config/config/: BUILD
bazel/rbe_config/java/: BUILD
src/app_charts/: BUILD.bazel  README.md
src/app_charts/akri/: BUILD.bazel  akri-robot.values.yaml  values-robot.yaml  values.yaml
src/app_charts/akri/robot/: akri.yaml
src/app_charts/base/: BUILD.bazel  README.md  app_management_test.sh  cert-manager-cloud.values.yaml  cert-manager-google-cas-issuer-cloud.values.yaml  cert-manager-robot.values.yaml  chart-assignment-controller-cloud.values.yaml  chart-assignment-controller-robot.values.yaml  fluent-bit-helm.sh  fluent-bit-values.yaml  relay-dashboard.json  values-cloud.yaml  values-robot.yaml
src/app_charts/base/cloud/: app-management-policy.yaml  app-management.yaml  apps-crd.yaml  cert-ingress.yaml  cert-manager-certificate.yaml  cert-manager-certificates.yaml  cert-manager-google-cas-issuer.yaml  cert-manager-issuer-prod.yaml  cert-manager-issuer-staging.yaml  cert-manager-issuers.yaml  cert-manager.yaml  cloud-master.yaml  cr-syncer-auth-webhook.yaml  cr-syncer-policy.yaml  domain-redirect.yaml  fluentd-metrics.yaml  istio.yaml  kubernetes-api.yaml  mock-auth-provider.yaml  monitoring-crd.yaml  namespace.yaml  nginx-ingress-controller-policy.yaml  nginx-ingress-controller-shield-configmap.yaml  nginx-ingress-controller-shield.yaml  nginx-ingress-controller.yaml  nginx-ingress-lb.yaml  oauth2-proxy.yaml  registry-crd.yaml  registry-policy.yaml  relay-dashboards.yaml  token-vendor-app-fwd.yaml  token-vendor-go.yaml  token-vendor-rollout.yaml  token-vendor.yaml
src/app_charts/base/cloud-extra/: BUILD.bazel  fluentd-metrics.yaml
src/app_charts/base/robot/: app-management.yaml  cert-manager-certificates.yaml  cert-manager-issuers.yaml  cert-manager.yaml  cr-syncer.yaml  fluent-bit.yaml  fluentd-gcp-addon.yaml  fluentd-metrics.yaml  gcr-credential-refresher.yaml  metadata-server.yaml  robot-master.yaml
src/app_charts/chart-assignment-controller/: BUILD.bazel  Chart.yaml  README.md  values.yaml
src/app_charts/chart-assignment-controller/templates/: _helpers.tpl  certificate.yaml  chartassignment-crd.yaml  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  service.yaml  serviceaccount.yaml  webhook.yaml
src/app_charts/k8s-relay/: BUILD.bazel  values-cloud.yaml  values-robot.yaml
src/app_charts/k8s-relay/cloud/: http-route.yaml  ingress.yaml  kubernetes-relay-server.yaml  service-monitor.yaml  service.yaml
src/app_charts/k8s-relay/robot/: kubernetes-relay-client.yaml
src/app_charts/map/: BUILD.bazel
src/app_charts/map/cloud/: ingress.yaml  map-endpoint.yaml  service.yaml
src/app_charts/mission-crd/: BUILD.bazel  mission_crd.yaml  values.yaml
src/app_charts/platform-apps/: BUILD.bazel  values.yaml
src/app_charts/prometheus/: BUILD.bazel  README.md  kube-prometheus.values.yaml  prometheus-cloud.values.yaml  prometheus-node-exporter.values.yaml  prometheus-operator.values.yaml  prometheus-robot.values.yaml  prometheus.values.yaml  update_prometheus_adapter.sh  values-cloud.yaml
src/app_charts/prometheus/cloud/: app.yaml  (+13 more)
src/app_charts/prometheus/cloud-per-robot/: federation-service-monitor.yaml
src/app_charts/ros/: BUILD.bazel  dashboard.json  values-cloud.yaml  values.yaml
src/app_charts/ros-demo/: BUILD.bazel  roscon-demo-dashboard.json  values.yaml
src/app_charts/ros-master/: BUILD.bazel  values-robot.yaml
src/app_charts/token-vendor/: BUILD.bazel  dashboard.json  values-cloud.yaml
src/bootstrap/cloud/: BUILD.bazel  INSTALL_FROM_BINARY  run-install.sh  setup_cloud.sh.templ
src/bootstrap/robot/: BUILD.bazel  install_k8s_on_robot.sh  setup_robot.sh  setup_robot.sh.templ
src/docker/: BUILD.bazel
src/docker/ros/: BUILD.bazel  du  roscore.py  roscore_sim.launch  roscore_sim.py
src/docker/ros_adapter/: BUILD.bazel  main.py  ros_adapter_test.yaml
src/docker/ros_log/: BUILD.bazel  main.py  ros_log_test.yaml
src/docker/ros_websocket/: BUILD.bazel  ros_websocket.py  websocket.launch
src/docker/turtlebot_gazebo_sim/: Dockerfile  README.md  deploy.sh  ros-entrypoint.sh
src/go/tests/: BUILD.bazel  chartassignment_Test_go  k8s_integration_test.go  k8s_integration_test_auth_helper.go  relay-bench.sh  relay_test.sh  robot_integration_test.go
src/proto/common/: BUILD.bazel  transform.proto
src/proto/framework/: BUILD.bazel  config.proto
src/proto/hello-world/: BUILD.bazel  service.proto  spec.proto  unused.go
src/proto/http-relay/: BUILD.bazel  http_over_rpc.proto  unused.go
src/proto/map/: BUILD.bazel  map.proto  map.yaml
(+527 files in other folders)
