bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "29.0", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_oci", version = "2.0.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_shell", version = "0.4.1")
# -- bazel_dep definitions -- #

non_module_deps = use_extension("//:non_module_deps.bzl", "non_module_deps")
use_repo(non_module_deps, "kubernetes_helm")
use_repo(non_module_deps, "kubernetes_helm3")
use_repo(non_module_deps, "hashicorp_terraform")
use_repo(non_module_deps, "com_github_kubernetes_sigs_application")
use_repo(non_module_deps, "ingress-nginx")
# End of extension `non_module_deps`

#######
# C++ #
#######

bazel_dep(name = "toolchains_llvm", version = "1.1.2")

# Inspect supported toolchains at https://github.com/bazel-contrib/toolchains_llvm/blob/master/toolchain/internal/llvm_distributions.bzl
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "18.1.4",
)

use_repo(non_module_deps, "com_googleapis_storage_chrome_linux_amd64_sysroot")

llvm.sysroot(
    label = "@com_googleapis_storage_chrome_linux_amd64_sysroot//:all_files",
    targets = ["linux-x86_64"],
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

bazel_dep(name = "rules_cc", version = "0.1.5")

######
# Go #
######

bazel_dep(name = "rules_go", version = "0.59.0", repo_name = "io_bazel_rules_go")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.4")

bazel_dep(name = "gazelle", version = "0.47.0", repo_name = "bazel_gazelle")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//src:go.mod")
use_repo(
    go_deps,
    "com_github_cenkalti_backoff",
    "com_github_form3tech_oss_jwt_go",
    "com_github_fsnotify_fsnotify",
    "com_github_getlantern_httptest",
    "com_github_golang_glog",
    "com_github_golang_mock",
    "com_github_google_go_cmp",
    "com_github_google_nftables",
    "com_github_googlecloudrobotics_ilog",
    "com_github_jaypipes_ghw",
    "com_github_jaypipes_pcidb",
    "com_github_motemen_go_loghttp",
    "com_github_onsi_gomega",
    "com_github_pkg_errors",
    "com_github_prometheus_client_golang",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_google_cloud_go_compute_metadata",
    "com_google_cloud_go_storage",
    "in_gopkg_h2non_gock_v1",
    "io_k8s_api",
    "io_k8s_apiextensions_apiserver",
    "io_k8s_apimachinery",
    "io_k8s_cli_runtime",
    "io_k8s_client_go",
    "io_k8s_helm",
    "io_k8s_klog",
    "io_k8s_klog_v2",
    "io_k8s_sigs_controller_runtime",
    "io_k8s_sigs_kind",
    "io_k8s_sigs_yaml",
    "io_opencensus_go",
    "io_opencensus_go_contrib_exporter_prometheus",
    "io_opencensus_go_contrib_exporter_stackdriver",
    "org_golang_google_api",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_crypto",
    "org_golang_x_net",
    "org_golang_x_oauth2",
    "org_golang_x_sync",
)

#######
# OCI #
#######

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# gcloud container images describe gcr.io/distroless/base:latest --format='value(image_summary.digest)'
oci.pull(
    name = "distroless_base",
    digest = "sha256:b31a6e02605827e77b7ebb82a0ac9669ec51091edd62c2c076175e05556f4ab9",
    image = "gcr.io/distroless/base",
    platforms = ["linux/amd64"],
)

# gcloud container images describe gcr.io/distroless/cc:latest --format='value(image_summary.digest)'
oci.pull(
    name = "distroless_cc",
    digest = "sha256:8aad707f96620ee89e27febef51b01c6ff244277a3560fcfcfbe68633ef09193",
    image = "gcr.io/distroless/cc",
    platforms = ["linux/amd64"],
)
oci.pull(
    name = "iptables_base",
    digest = "sha256:656e45c00083359107b1d6ae0411ff3894ba23011a8533e229937a71be84e063",
    image = "gcr.io/google-containers/debian-iptables",
    platforms = ["linux/amd64"],
)
use_repo(
    oci,
    "distroless_base",
    "distroless_base_linux_amd64",
    "distroless_cc",
    "distroless_cc_linux_amd64",
    "iptables_base",
    "iptables_base_linux_amd64",
)
