exports_files([
    "app.bzl",
    "app_chart.bzl",
    "container_push.bzl",
    "repositories.bzl",
])

platform(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
        "@bazel_tools//tools/cpp:clang",
    ],
    exec_properties = {
        "container-image": "docker://gcr.io/cloud-robotics-releases/bazel-rbe-executor@sha256:3ee043e7a322caaff8c9edaa302373deb80e67ad6e42ae35d34b8f3597b8995e",
        "OSFamily": "Linux",
    },
    parents = ["@local_config_platform//:host"],
)
