load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/googlecloudrobotics/core/bazel/buildcleaner",
    visibility = ["//visibility:private"],
    deps = ["//bazel/buildcleaner/cmd:go_default_library"],
)

go_binary(
    name = "buildcleaner",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)
