load("//:config.bzl", "CLOUD_ROBOTICS_CONTAINER_REGISTRY")
load("//bazel/build_rules/app_chart:cache_gcr_credentials.bzl", "cache_gcr_credentials")
load("//bazel/build_rules/app_chart:run_parallel.bzl", "run_parallel")
load("//bazel/build_rules/app_chart:run_sequentially.bzl", "run_sequentially")

# base is not in this list because it's not an app, but installed
# manually.
APPS = [
    "k8s-relay",
    "map",
    "mission-crd",
    "prometheus",
    "ros",
    "ros-demo",
    "ros-master",
]

run_parallel(
    name = "push-cached-credentials",
    targets = [
        "//src/app_charts/base:base-cloud.push",
        "//src/app_charts/base:base-robot.push",
        "//src/app_charts/platform-apps:platform-apps-cloud.push",
    ] + [
        "//src/app_charts/{app}:{app}.push".format(app = a)
        for a in APPS
    ],
)

cache_gcr_credentials(
    name = "push",
    gcr_registry = CLOUD_ROBOTICS_CONTAINER_REGISTRY,
    target = "push-cached-credentials",
)

filegroup(
    name = "app_resources",
    srcs = ["//src/app_charts/{app}:{app}.yaml".format(app = a) for a in APPS],
    visibility = ["//visibility:public"],
)
