load("@io_bazel_rules_docker//container:container.bzl", "container_image")

container_image(
    name = "python27",
    base = "@py_debug_image_base//image",
    debs = [
        # TODO(rodrigoq): remove rospack's dep on libpython2.7.so
        # (see rospack.BUILD for details)
        "@libpython_2_7//file",
    ],
    visibility = ["//visibility:public"],
)
