load("//bazel:app.bzl", "app")
load("//bazel:app_chart.bzl", "app_chart")
load("//bazel:build_rules/helm_template.bzl", "helm_template")

helm_template(
    name = "akri-chart.robot",
    chart = "//third_party/akri:akri-0.12.9.tgz",
    helm_version = 3,
    # The namespace will later be replaced with the actual one.
    namespace = "HELM-NAMESPACE",
    release_name = "akri",
    values = "akri-robot.values.yaml",
)

app_chart(
    name = "akri-robot",
    extra_templates = [
        "//third_party/akri:akri-configuration-crd.yaml",
        "//third_party/akri:akri-instance-crd.yaml",
    ],
    files = [
        ":akri-chart.robot",
    ],
    values = "values-robot.yaml",
)

app(
    name = "akri",
    charts = [
        ":akri-robot",
    ],
    visibility = ["//visibility:public"],
)
