load("//bazel:build_rules/helm_template.bzl", "helm_template")
load("//bazel:app_chart.bzl", "app_chart")

# Tests

app_chart(
    name = "base-test",
    extra_templates = [
        ":cloud/namespace.yaml",
        ":cloud/apps-crd.yaml",
        ":robot/app-management.yaml",
        ":robot/cert-manager.yaml",
        ":robot/cert-manager-certificates.yaml",
        ":robot/cert-manager-issuers.yaml",
    ],
    files = [
        ":cert-manager-chart.robot",
    ],
    images = {
        "chart-assignment-controller": "//src/go/cmd/chart-assignment-controller",
    },
    values = ":values-robot.yaml",
    visibility = ["//visibility:public"],
)

sh_test(
    name = "app_management_test",
    srcs = ["app_management_test.sh"],
    data = [
        ":base-cloud",
        ":base-robot",
        "@kubernetes_helm//:helm",
    ],
)

# Robot

helm_template(
    name = "cert-manager-chart.robot",
    chart = "//third_party/cert-manager:cert-manager-v1.7.2.tgz",
    # The namespace will later be replaced with the actual one.
    namespace = "HELM-NAMESPACE",
    release_name = "cert-manager",
    values = "cert-manager-robot.values.yaml",
)

app_chart(
    name = "base-robot",
    extra_templates = [
        ":cloud/namespace.yaml",
        ":cloud/registry-crd.yaml",
        ":cloud/apps-crd.yaml",
        "//third_party/kube-prometheus-stack:01-crds.yaml",
    ],
    files = [
        ":cert-manager-chart.robot",
        "//third_party/fluentd_gcp_addon",
    ],
    images = {
        "cr-syncer": "//src/go/cmd/cr-syncer",
        "gcr-credential-refresher": "//src/go/cmd/gcr-credential-refresher",
        "metadata-server": "//src/go/cmd/metadata-server",
        "chart-assignment-controller": "//src/go/cmd/chart-assignment-controller",
    },
    values = "values-robot.yaml",
    visibility = ["//visibility:public"],
)

# Cloud

helm_template(
    name = "cert-manager-chart.cloud",
    chart = "//third_party/cert-manager:cert-manager-v1.7.2.tgz",
    # The namespace will later be replaced with the actual one.
    namespace = "HELM-NAMESPACE",
    release_name = "cert-manager",
    values = "cert-manager-cloud.values.yaml",
)

helm_template(
    name = "cert-manager-google-cas-issuer-chart.cloud",
    chart = "//third_party/cert-manager-google-cas-issuer:cert-manager-google-cas-issuer-v0.6.2.tgz",
    # The namespace will later be replaced with the actual one.
    namespace = "HELM-NAMESPACE",
    release_name = "cert-manager-google-cas-issuer",
    values = "cert-manager-google-cas-issuer-cloud.values.yaml",
)

app_chart(
    name = "base-cloud",
    extra_templates = [
        "@com_github_kubernetes_sigs_application//:app_crd",
        "//third_party/kube-prometheus-stack:01-crds.yaml",
    ],
    files = [
        "relay-dashboard.json",
        ":cert-manager-chart.cloud",
        ":cert-manager-google-cas-issuer-chart.cloud",
        "@ingress-nginx//:ingress-nginx-dashboards",
    ],
    images = {
        "app-rollout-controller": "//src/go/cmd/app-rollout-controller",
        "chart-assignment-controller": "//src/go/cmd/chart-assignment-controller",
    },
    values = "values-cloud.yaml",
    visibility = ["//visibility:public"],
)
