load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//bazel:app_chart.bzl", "app_chart")
load("//bazel:build_rules/helm_template.bzl", "helm_template")

# Tests

helm_template(
    name = "chart-assignment-controller-chart.robot",
    chart = "//src/app_charts/chart-assignment-controller",
    helm_version = 3,
    # The namespace will later be replaced with the actual one.
    namespace = "HELM-NAMESPACE",
    release_name = "chart-assignment-controller",
    values = "chart-assignment-controller-robot.values.yaml",
)

app_chart(
    name = "base-test",
    extra_templates = [
        ":cloud/namespace.yaml",
        ":cloud/apps-crd.yaml",
        ":robot/app-management.yaml",
        ":robot/cert-manager.yaml",
        ":robot/cert-manager-certificates.yaml",
        ":robot/cert-manager-issuers.yaml",
    ],
    files = [
        ":cert-manager-chart.robot",
        ":chart-assignment-controller-chart.robot",
    ],
    images = {
        "chart-assignment-controller": "//src/go/cmd/chart-assignment-controller:chart-assignment-controller-image",
    },
    values = ":values-robot.yaml",
    visibility = ["//visibility:public"],
)

sh_test(
    name = "app_management_test",
    srcs = ["app_management_test.sh"],
    data = [
        ":base-cloud",
        ":base-robot",
        "@kubernetes_helm//:helm",
    ],
)

# Robot

helm_template(
    name = "cert-manager-chart.robot",
    chart = "//third_party/cert-manager:cert-manager-v1.16.3.tgz",
    helm_version = 3,
    # The namespace will later be replaced with the actual one.
    namespace = "HELM-NAMESPACE",
    release_name = "cert-manager",
    values = "cert-manager-robot.values.yaml",
)

app_chart(
    name = "base-robot",
    extra_templates = [
        ":cloud/namespace.yaml",
        ":cloud/registry-crd.yaml",
        ":cloud/apps-crd.yaml",
        "//third_party/kube-prometheus-stack:01-crds.yaml",
    ],
    extra_values = ["values-robot.yaml"],
    files = [
        ":cert-manager-chart.robot",
        ":chart-assignment-controller-chart.robot",
        "//third_party/fluentd_gcp_addon",
    ],
    images = {
        "cr-syncer": "//src/go/cmd/cr-syncer:cr-syncer-image",
        "gcr-credential-refresher": "//src/go/cmd/gcr-credential-refresher:gcr-credential-refresher-image",
        "metadata-server": "//src/go/cmd/metadata-server:metadata-server-image",
        "chart-assignment-controller": "//src/go/cmd/chart-assignment-controller:chart-assignment-controller-image",
    },
    visibility = ["//visibility:public"],
)

# Cloud

helm_template(
    name = "cert-manager-chart.cloud",
    chart = "//third_party/cert-manager:cert-manager-v1.16.3.tgz",
    helm_version = 3,
    # The namespace will later be replaced with the actual one.
    namespace = "HELM-NAMESPACE",
    release_name = "cert-manager",
    values = "cert-manager-cloud.values.yaml",
)

helm_template(
    name = "chart-assignment-controller-chart.cloud",
    chart = "//src/app_charts/chart-assignment-controller",
    helm_version = 3,
    # The namespace will later be replaced with the actual one.
    namespace = "HELM-NAMESPACE",
    release_name = "chart-assignment-controller",
    values = "chart-assignment-controller-cloud.values.yaml",
)

app_chart(
    name = "base-cloud",
    extra_templates = [
        "@com_github_kubernetes_sigs_application//:app_crd",
        "//third_party/kube-prometheus-stack:01-crds.yaml",
        "//third_party/gateway-api:grpcroute-generated.yaml",
        "//third_party/istio:istio-generated.yaml",
        "//third_party/istio:istio-dashboards.yaml",
    ],
    files = [
        "relay-dashboard.json",
        ":cert-manager-chart.cloud",
        ":chart-assignment-controller-chart.cloud",
        "//third_party/istio:istio-config.yaml",
        "//third_party/istio:istio-dashboards",
        "//third_party/istio:istio-values.json",
        "@ingress-nginx//:ingress-nginx-dashboards",
    ],
    images = {
        "app-rollout-controller": "//src/go/cmd/app-rollout-controller:app-rollout-controller-image",
        "chart-assignment-controller": "//src/go/cmd/chart-assignment-controller:chart-assignment-controller-image",
        "cr-syncer-auth-webhook": "//src/go/cmd/cr-syncer-auth-webhook:cr-syncer-auth-webhook-image",
        "status-echo-server": "//src/go/cmd/status-echo-server:status-echo-server-image",
    },
    values = "values-cloud.yaml",
    visibility = ["//visibility:public"],
)
