load("//bazel:app.bzl", "app")
load("//bazel:app_chart.bzl", "app_chart")

app_chart(
    name = "k8s-relay-cloud",
    extra_values = ["values-cloud.yaml"],
    images = {"http-relay-server": "//src/go/cmd/http-relay-server:http-relay-server-image"},
)

app_chart(
    name = "k8s-relay-robot",
    extra_values = ["values-robot.yaml"],
    images = {"http-relay-client": "//src/go/cmd/http-relay-client:http-relay-client-image"},
)

app(
    name = "k8s-relay",
    charts = [
        ":k8s-relay-cloud",
        ":k8s-relay-robot",
    ],
    visibility = ["//visibility:public"],
)
