load("//bazel/internal:core_app_chart.bzl", "core_app_chart")
load("//bazel:app.bzl", "app")

core_app_chart(
    name = "map-cloud",
    images = {"map-endpoint": "//src/java/com/cloudrobotics/map:map_endpoint"},
)

app(
    name = "map",
    charts = [
        ":map-cloud",
    ],
    v2 = True,
    visibility = ["//visibility:public"],
)
