load("//bazel:app_chart.bzl", "app_chart")
load("//bazel:app.bzl", "app")

app_chart(
    name = "map-cloud",
    images = {"map-endpoint": "//src/java/com/cloudrobotics/map:map_endpoint"},
)

app(
    name = "map",
    charts = [
        ":map-cloud",
    ],
    visibility = ["//visibility:public"],
)
