load("//bazel:app.bzl", "app")
load("//bazel:app_chart.bzl", "app_chart")

app_chart(
    name = "mission-crd-robot",
    extra_templates = ["//src/proto/mission:mission_cr_crd"],
    values = "values.yaml",
)

app_chart(
    name = "mission-crd-cloud",
    extra_templates = ["//src/proto/mission:mission_cr_crd"],
    values = "values.yaml",
)

app(
    name = "mission-crd",
    charts = [
        ":mission-crd-cloud",
        ":mission-crd-robot",
    ],
    visibility = ["//visibility:public"],
)
