load("//bazel:app.bzl", "app")
load("//bazel:app_chart.bzl", "app_chart")

app_chart(
    name = "mission-crd-robot",
    extra_templates = ["mission_crd.yaml"],
    values = "values.yaml",
)

app_chart(
    name = "mission-crd-cloud",
    extra_templates = ["mission_crd.yaml"],
    values = "values.yaml",
)

app(
    name = "mission-crd",
    charts = [
        ":mission-crd-cloud",
        ":mission-crd-robot",
    ],
    visibility = ["//visibility:public"],
)
