load("//bazel/build_rules:helm_template.bzl", "helm_template")
load("//bazel/internal:core_app_chart.bzl", "core_app_chart")
load("//bazel:app.bzl", "app")

helm_template(
    name = "prometheus-operator-chart.cloud",
    chart = "//third_party/prometheus-operator:prometheus-operator-5.0.3.tgz",
    # The namespace will later be replaced with the actual one.
    namespace = "HELM-NAMESPACE",
    # Pick a short release name as it will be used as a prefix for a lot fo resources.
    release_name = "prom",
    values = ":prometheus-cloud.values.yaml",
)

helm_template(
    name = "prometheus-operator-chart.robot",
    chart = "//third_party/prometheus-operator:prometheus-operator-5.0.3.tgz",
    # The namespace will later be replaced with the actual one.
    namespace = "HELM-NAMESPACE",
    # Pick a short release name as it will be used as a prefix for a lot fo resources.
    release_name = "prom",
    values = ":prometheus-robot.values.yaml",
)

core_app_chart(
    name = "prometheus-cloud",
    files = [
        ":prometheus-operator-chart.cloud",
    ],
    images = {
        "http-relay-server": "//src/go/cmd/http-relay-server",
    },
)

core_app_chart(
    name = "prometheus-robot",
    extra_templates = [
        ":cloud/kubelet-service-monitor.yaml",
    ],
    files = [
        ":prometheus-operator-chart.robot",
    ],
    images = {"http-relay-client": "//src/go/cmd/http-relay-client"},
)

app(
    name = "prometheus",
    charts = [
        ":prometheus-cloud",
        ":prometheus-robot",
    ],
    visibility = ["//visibility:public"],
)
