load("//bazel:build_rules/helm_template.bzl", "helm_template")
load("//bazel:app_chart.bzl", "app_chart")
load("//bazel:app.bzl", "app")

helm_template(
    name = "prometheus-operator-chart.cloud",
    chart = "//third_party/kube-prometheus-stack:kube-prometheus-stack-56.6.2.tgz",
    helm_version = 3,
    # The namespace will later be replaced with the actual one.
    namespace = "HELM-NAMESPACE",
    # Pick a short release name as it will be used as a prefix for a lot of resources.
    release_name = "prom",
    values = "prometheus-cloud.values.yaml",
)

helm_template(
    name = "prometheus-operator-chart.robot",
    chart = "//third_party/kube-prometheus-stack:kube-prometheus-stack-56.6.2.tgz",
    helm_version = 3,
    # The namespace will later be replaced with the actual one.
    namespace = "HELM-NAMESPACE",
    # Pick a short release name as it will be used as a prefix for a lot of resources.
    release_name = "prom",
    values = "prometheus-robot.values.yaml",
)

app_chart(
    name = "prometheus-cloud",
    extra_templates = [
        "//third_party/kube-prometheus-stack:00-crds.yaml",
    ],
    files = [
        ":prometheus-operator-chart.cloud",
    ],
    images = {
        "http-relay-server": "//src/go/cmd/http-relay-server:http-relay-server-image",
    },
    values = "values-cloud.yaml",
)

app_chart(
    name = "prometheus-robot",
    extra_templates = [
        "//third_party/kube-prometheus-stack:00-crds.yaml",
    ],
    files = [
        ":prometheus-operator-chart.robot",
    ],
    images = {"http-relay-client": "//src/go/cmd/http-relay-client:http-relay-client-image"},
)

app(
    name = "prometheus",
    charts = [
        ":prometheus-cloud",
        ":prometheus-robot",
    ],
    visibility = ["//visibility:public"],
)
