load("//bazel/internal:core_app_chart.bzl", "core_app_chart")
load("//bazel:app.bzl", "app")

core_app_chart(
    name = "ros-demo-robot",
)

core_app_chart(
    name = "ros-demo-cloud",
    files = [":roscon-demo-dashboard.json"],
    images = {"ros-demo-server": "//src/python/ros_demo:server"},
)

app(
    name = "ros-demo",
    charts = [
        ":ros-demo-cloud",
        ":ros-demo-robot",
    ],
    v2 = True,
    visibility = ["//visibility:public"],
)
