load("//bazel:app_chart.bzl", "app_chart")
load("//bazel:app.bzl", "app")

app_chart(
    name = "ros-demo-robot",
    values = "values.yaml",
)

app_chart(
    name = "ros-demo-cloud",
    files = [":roscon-demo-dashboard.json"],
    images = {"ros-demo-server": "//src/python/ros_demo:server"},
)

app(
    name = "ros-demo",
    charts = [
        ":ros-demo-cloud",
        ":ros-demo-robot",
    ],
    visibility = ["//visibility:public"],
)
