load("//bazel/internal:core_app_chart.bzl", "core_app_chart")
load("//bazel:app.bzl", "app")

core_app_chart(
    name = "ros-master-robot",
    values = "values-robot.yaml",
)

app(
    name = "ros-master",
    charts = [
        ":ros-master-robot",
    ],
    v2 = True,
    visibility = ["//visibility:public"],
)
