load("//bazel/internal:core_app_chart.bzl", "core_app_chart")
load("//bazel:app.bzl", "app")

core_app_chart(
    name = "ros-robot",
    images = {"ros-adapter": "//src/docker/ros_adapter:ros_adapter"},
)

core_app_chart(
    name = "ros-cloud",
    files = [":dashboard.json"],
    images = {
        "cloud-tunnel": "//src/go/cmd/cloud-tunnel",
        "ros-adapter": "//src/docker/ros_adapter:ros_adapter",
        "ros-log": "//src/docker/ros_log",
        "roscore": "//src/docker/ros:roscore",
        "roscore-sim": "//src/docker/ros:roscore_sim",
    },
    values = "values-cloud.yaml",
)

app(
    name = "ros",
    charts = [
        ":ros-cloud",
        ":ros-robot",
    ],
    v2 = True,
    visibility = ["//visibility:public"],
)
