load("//bazel:app_chart.bzl", "app_chart")
load("//bazel:app.bzl", "app")

app_chart(
    name = "ros-robot",
    images = {"ros-adapter": "//src/docker/ros_adapter:ros_adapter"},
)

app_chart(
    name = "ros-cloud",
    files = [":dashboard.json"],
    images = {
        "cloud-tunnel": "//src/go/cmd/cloud-tunnel",
        "ros-adapter": "//src/docker/ros_adapter:ros_adapter",
        "ros-log": "//src/docker/ros_log",
        "roscore": "//src/docker/ros:roscore",
        "roscore-sim": "//src/docker/ros:roscore_sim",
    },
    values = "values-cloud.yaml",
)

app(
    name = "ros",
    charts = [
        ":ros-cloud",
        ":ros-robot",
    ],
    visibility = ["//visibility:public"],
)
